fixed spacing in 09 css doc

--- a/09-FloatLayout-Activity/Unsolved/floats.css
+++ b/09-FloatLayout-Activity/Unsolved/floats.css
@@ -61,6 +61,7 @@ section {
 #division {
   width: 98%;
   margin-left: 1%;
+  margin-top: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: #6ea3da;
